# zk-token-sim

./: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json  zk_token_sim.json
lib/: point.ts  utils.ts  vectors.ts
programs/zk-token-sim/: Cargo.toml
programs/zk-token-sim/src/: errors.rs  lib.rs
programs/zk-token-sim/src/instructions/: initialize_account.rs  initialize_mint.rs  mint_to.rs  mod.rs  transfer.rs
programs/zk-token-sim/src/schema/: account.rs  mint.rs  mod.rs  point.rs
test-ledger/: faucet-keypair.json
tests/: zk-token-sim.ts
tests/coder/: accounts.ts  buffer-layout.ts  common.ts  events.ts  index.ts  instruction.ts  state.ts
