[package]
name = "zk-token-sim"
version = "0.1.0"
description = "Zero knowledge spl token simulator"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_token_sim"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.22.0", features = ["init-if-needed"] }
borsh = "0.9.3"
curve25519-dalek = "3.2.0"
num-traits = "0.2.14"
getrandom = { version = "0.1", features = ["dummy"] }
sha3 = "0.9"
lazy_static = "1.4.0"
